force-app/main/default/objects/UserServicePresence__c.object
<CustomObject>
    <fields>
        <fullName>AtCapacityDuration__c</fullName>
        <label>AtCapacityDuration</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AverageCapacity__c</fullName>
        <label>AverageCapacity</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ConfiguredCapacity__c</fullName>
        <label>ConfiguredCapacity</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>CreatedDate__c</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IdleDuration__c</fullName>
        <label>IdleDuration</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAway__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsAway</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCurrentState__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsCurrentState</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <label>Owner ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServicePresenceStatusId__c</fullName>
        <label>Service Presence Status ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusDuration__c</fullName>
        <label>StatusDuration</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StatusEndDate__c</fullName>
        <label>StatusEndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>StatusStartDate__c</fullName>
        <label>StatusStartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UserId__c</fullName>
        <label>User ID</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analyticsdemo_batch_id__c</fullName>
        <label>analyticsdemo_batch_id__c</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>UserServicePresence__c</label>
    <nameField>
        <label>UserServicePresence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UserServicePresence__c</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>